<resources>
    <string name="app_name">Jepara Advertiser</string>
    <string name="scan">Scan</string>
    <string name="bookmark">Bookmark</string>
    <string name="close">Close</string>
    <string name="masukkan_nama_bookmark">Masukkan Nama Bookmark</string>
    <string name="nama_bookmark">Nama Bookmark</string>
    <string name="batal">Batal</string>
    <string name="simpan">Simpan</string>
    <string name="namasitus">NamaSitus</string>
    <string name="delete">delete</string>
    <string name="hapus_semua">Hapus Semua</string>
    <string name="_30">30</string>
    <string name="share">Share</string>
    <string name="menuicon">menuicon</string>
    <string name="jepara_advertiser">Jepara Advertiser</string>
    <string name="bookmark_kosong">Bookmark Kosong</string>
    <string name="slideimg">slideimg</string>
    <string name="scan_qr_code_untuk_info_lengkap_iklan">Scan QR Code untuk info lengkap iklan sfjksdfskdjf sksdjfkdsjf lkjsfkjds kjdjd dfjdsf jsdkfjdsk sdjdfjs jsdjfsd jsdjfds jdfjsdfj dsfjsj sdjsdhf sdsdfhdsfh </string>
    <string name="scan_qrcode">SCAN QRCODE</string>
    <string name="back">Kembali</string>
    <string name="next">Lanjut</string>
    <string name="splashicon">splashIcon</string>
    <string name="daftar_jumlah_kunjungan_iklan">Daftar Jumlah Kunjungan Iklan</string>
    <string name="bulan">Bulan</string>
    <string name="isi_kontent">isi kontent</string>
    <string name="ini_gambar">ini gambar</string>
    <string name="tabel_image">tabel image</string>
    <string name="perusda">perusda</string>
    <string name="jads">jads</string>
    <string name="info">Info</string>
    <string name="selesai">Selesai</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="tanggal">Tanggal</string>
    <string name="pilih_tindakan">Pilih Tindakan</string>
    <string name="ini_nama_kategori">Ini Nama Kategori</string>
    <string name="kesalahan">Terjadi kesalahan, silahkan coba lagi</string>
    <string name="tidak_ditemukan">Data tidak ditemukan</string>
    <string name="note_textview">note textview</string>
    <string name="raw">raw</string>
    <string name="id">idIklan</string>
    <string name="nama">nama</string>
    <string name="bookmark_dihapus_semua">Bookmark dihapus semua</string>
    <string name="hapus_semua_bookmark">Hapus semua bookmark?</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="msg_share">Download Jepara Advertiser di Google Play Store untuk scan</string>
    <string name="link_app">http://bit.ly/JeparaAdvertiser</string>
    <string name="hapus_bookmark">Hapus Bookmark</string>
    <string name="yakin_ingin_hapus_bookmark">Anda yakin ingin menghapus bookmark?</string>
    <string name="bookmark_dihapus">Bookmark dihapus</string>
    <string name="info_iklan">Info Iklan</string>
    <string name="error">error</string>
    <string name="deskripsi">deskripsi</string>
    <string name="tabel">tabel</string>
    <string name="info_iklan_id">info_iklan</string>
    <string name="name_child">name_child</string>
    <string name="name_title">name_title</string>
    <string name="lat">lat</string>
    <string name="lng">lng</string>
    <string name="name">name</string>
    <string name="distribusi">lokasi_distribusi</string>
    <string name="advertiser">data_iklan</string>
    <string name="wisata">lokasi_wisata_jepara</string>
    <string name="peta_distribusi">Peta Distribusi</string>
    <string name="peta_advertiser">Peta Advertiser</string>
    <string name="peta_wisata_jepara">Peta Wisata Jepara</string>
    <string name="desc_peta_distribusi">Peta ini menunjukkan lokasi distribusi tabloid Jepara Advertiser</string>
    <string name="desc_peta_advertiser">Peta ini menunjukkan lokasi Pengiklan di tabloid Jepara Advertiser</string>
    <string name="desc_peta_wisata_jepara">Peta ini menunjukkan lokasi wisata di Kabupaten Jepara</string>
    <string name="tutup">Tutup</string>
    <string name="key">PerusdaJeparaAdvertiser</string>
    <string name="salt">InformationInARightWay</string>
    <string name="string_tidak_sesuai">String tidak sesuai standar</string>
    <string name="izin_tidak_diberikan">Izin tidak diberikan</string>
    <string name="statistik">Statistik</string>
    <string name="qrcode">QR Code Scanner</string>
    <string name="tentang">Jepara Advertiser</string>
    <string name="info_lengkap">Info Lengkap</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="telepon">Telepon</string>
    <string name="sms">SMS</string>
    <string name="lokasi">Lokasi</string>
    <string name="anda_belum_install_whatsapp">Anda belum install WhatsApp</string>
    <string name="terjadi_kesalahan">Terjadi Kesalahan</string>
    <string name="anda_belum_install_gmaps">Anda belum install Google Maps</string>
    <string name="batas_maksimal_bookmark">Anda mencapai batas maksimal bookmark</string>
    <string name="bookmark_ditambahkan">Bookmark ditambahkan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="setting">Setting</string>
    <string name="cari_iklan">Cari Iklan</string>
    <string name="nama_iklan">Nama Iklan</string>
    <string name="pilih_aksi">Sembunyikan halaman pilih aksi</string>
    <string name="simpan_pengaturan">Simpan Pengaturan</string>
    <string name="yakin_simpan_pengaturan">Anda yakin ingin menyimpan pengaturan</string>
    <string name="berhasil_disimpan">Berhasil disimpan</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="belum_tersimpan">Belum Tersimpan</string>
    <string name="anda_belum_menyimpan">Anda belum menyimpan pengaturan anda, simpan sekarang?</string>
    <string name="filter">Filter</string>
    <string name="a_z_ascending">[A-Z] Ascending</string>
    <string name="z_a_descending">[Z-A] Descending</string>
    <string name="terapkan">Terapkan</string>
    <string name="memuat">Memuat...</string>
    <string name="edisi_bulan_ini">Edisi Bulan Ini</string>
    <string name="more_info">More Info</string>
    <string name="ini_adalah_kata">ini adalah kata</string>
</resources>
