<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:padding="32dp"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_slide"
        android:layout_gravity="center"
        android:contentDescription="@string/slideimg"
        android:layout_width="164dp"
        android:layout_height="164dp"
        android:src="@drawable/ic_launcher_background"/>

    <TextView
        android:textStyle="bold"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:id="@+id/title_slide"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_qrcode"/>

    <TextView
        android:id="@+id/desc_slide"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_qr_code_untuk_info_lengkap_iklan"/>

</LinearLayout>