<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".mainmenu.StatistikActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_weight="1"
            android:padding="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bulan"/>

            <Spinner
                android:layout_marginTop="8dp"
                android:id="@+id/spinnerBulan"
                android:layout_width="match_parent"
                android:layout_height="32dp">

            </Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:padding="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tanggal"/>

            <Spinner
                android:layout_marginTop="8dp"
                android:id="@+id/spinnerTanggal"
                android:layout_width="match_parent"
                android:layout_height="32dp">

            </Spinner>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:textStyle="bold"
        android:padding="16dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/daftar_jumlah_kunjungan_iklan"/>

    <android.support.v7.widget.RecyclerView
        android:layout_margin="2dp"
        android:id="@+id/statsRecy"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>